# ai-edge-torch

./: pyproject.toml  requirements.txt  setup.py
ai_edge_torch/: __init__.py  _config.py
ai_edge_torch/.cursor/memory-banks/: README.md
ai_edge_torch/.cursor/memory-banks/custom_rms_norm/: README.md  implementation.md  limitations.md  overview.md  quickstart.md  status.md  testing.md  usage.md
ai_edge_torch/.cursor/rules/: cursor-rules.mdc  python-env.mdc
ai_edge_torch/_convert/: conversion.py  converter.py
ai_edge_torch/generative/custom_ops/: __init__.py  custom_rms_norm.py
ai_edge_torch/generative/examples/amd_llama_small/: amd_llama_attention.py  amd_llama_small.py  convert_attention_to_tflite.py  convert_to_tflite.py  verify_attention_tflite.py
ai_edge_torch/generative/examples/attention_model/: check_decode_model.py  check_model_inputs.py  create_custom_kv_model.py  test_convert.py
ai_edge_torch/generative/examples/test_models/: convert_toy_model.py
ai_edge_torch/generative/examples/tiny_llama/: DOCUMENTATION_INDEX.md  FLASH_ATTENTION_COMPLETE.md  FLASH_ATTENTION_INTEGRATION.md  FLASH_ATTENTION_QUICKSTART.md  FLASH_INTEGRATION_SUMMARY.md  README.md  VERIFY_TFLITE_README.md  convert_to_tflite.py  debug_flash_generation.py  test_flash_attention.py  tiny_llama.py  verify.py  verify_flash.py  verify_tflite.py
ai_edge_torch/generative/examples/uvq1.5/: CONVERSION_SUMMARY.md  INT8_QUANTIZATION_README.md  OPERATOR_ANALYSIS.md  README.md  __init__.py  analyze_tflite_ops.py  compare_distortionnet_all.py  compare_full_distortionnet_4d.py  compare_pytorch_tflite_distortionnet.py  compare_pytorch_tflite_minimal.py  convert_and_verify_distortionnet.py  convert_distortion_3patch.py  convert_distortion_3patch_int8.py  convert_distortion_9patch.py  convert_distortion_9patch_int8.py  convert_minimal_distortionnet.py  convert_to_tflite.py  convert_to_tflite_int8.py  test_4d_aggregation.py  test_format_consistency.py  uvq_models.py  uvq_models_mod_py  verify_distortion_3patch.py  verify_distortion_9patch.py  verify_int8_models.py  verify_tflite.py
ai_edge_torch/generative/examples/videoseal/: DETECTOR_README.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INT8_IMPLEMENTATION_SUMMARY.md  INT8_QUANTIZATION.md  QUICKSTART.md  README.md  __init__.py  convert_detector_to_tflite.py  convert_to_tflite.py  example_usage.py  tflite_msg_processor.py  verify_detector_tflite.py  verify_tflite.py  videoseal_models.py
ai_edge_torch/generative/examples/videoseal0.0/: ACCURACY_REPORT.md  COMPLETION_REPORT.md  CONVERSION_GUIDE.md  FINAL_SUMMARY.md  GATHER_ND_ANALYSIS.md  GENERATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INT8_BATCH_MATMUL_ISSUE.md  NHWC_FORMAT_CHANGES.md  README.md  __init__.py  convert_detector_to_tflite.py  convert_embedder_to_tflite.py  example_usage.py  test_accuracy.py  tflite_friendly_upsample.py  tflite_msg_processor.py  verify_detector_tflite.py  videoseal00_models.py
ai_edge_torch/generative/layers/: attention.py  builder.py  flash_attention_adapter.py  kv_cache.py  model_config.py  normalization.py
ai_edge_torch/generative/test/: test_custom_rms_norm.py  test_tflite_conversion.py
ai_edge_torch/generative/utilities/: transformers_verifier.py  verifier.py
(+1 files in other folders)
