[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-edge-torch"
# We keep the version in ai_edge_torch/version.py and read it dynamically.
dynamic = ["version"]
description = "Supporting PyTorch models with the Google AI Edge TFLite runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AI Edge Torch Authors" }]
keywords = ["On-Device ML", "AI", "Google", "TFLite", "PyTorch", "LLMs", "GenAI"]

# IMPORTANT: Leave this empty so `pip install -e .` won't re-resolve your env.
dependencies = []

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/google-ai-edge/ai-edge-torch"
Repository = "https://github.com/google-ai-edge/ai-edge-torch#installation"
Issues = "https://github.com/google-ai-edge/ai-edge-torch/issues"

[project.optional-dependencies]
# Mirror the CURRENT environment pins you actually want.
# Use this when you want pip to install everything in one shot:
#   pip install -e .[full] --pre
full = [
  "absl-py",
  "torch==2.9.0",
  "torchvision==0.24.0",
  "torchaudio==2.9.0",
  # '--pre' is a pip flag; pass it on the command line if needed.
  "tf-nightly>=2.21.0.dev20250818",
  "ai-edge-litert-nightly",
  "ai-edge-quantizer-nightly",
  "jax[cpu]",
  "torch-xla2[odml]>=0.0.1.dev20241201",
  "scipy",
  "numpy",
  "tabulate",
  "safetensors",
  "kagglehub",
  "transformers",
  "multipledispatch",
]

# Optional: keep an "upstream" extra that reflects your original setup.py ranges.
# This can be handy for CI or reproducing upstream behavior.
upstream = [
  "absl-py",
  "numpy",
  "scipy",
  "safetensors",
  "multipledispatch",
  "transformers",
  "kagglehub",
  "tabulate",
  "torch>=2.4.0",
  "tf-nightly>=2.21.0.dev20250818",
  "ai-edge-litert-nightly",
  "ai-edge-quantizer-nightly",
  "jax",
  "torch-xla2[odml]>=0.0.1.dev20241201",
]

# Keep the small xla extra for parity with `extras_require={"torch-xla": ...}`
xla = ["torch_xla>=2.4.0"]

[tool.setuptools]
# Default (no src layout), packages under the root.
# If you use a src/ layout, add: package-dir = {"" = "src"}
# and adjust the finder to where="src"
zip-safe = false

[tool.setuptools.packages.find]
include = ["ai_edge_torch*"]

[tool.setuptools.dynamic]
# Reads __version__ = "..." from ai_edge_torch/version.py
version = { attr = "ai_edge_torch.version.__version__" }

